--- a/oxalis-dist/oxalis-war/pom.xml
+++ b/oxalis-dist/oxalis-war/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>network.oxalis</groupId>
             <artifactId>oxalis-as4</artifactId>
-            <version>6.0.0-RC3</version>
+            <version>6.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Servlet -->
