--- a/oxalis-extension/pom.xml
+++ b/oxalis-extension/pom.xml
@@ -52,7 +52,7 @@
        <dependency>
             <groupId>network.oxalis</groupId>
             <artifactId>oxalis-as4</artifactId>
-            <version>6.0.0-RC3</version>
+            <version>6.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
