--- a/oxalis-extension/pom.xml
+++ b/oxalis-extension/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>oxalis</artifactId>
         <groupId>network.oxalis</groupId>
-        <version>6.0.1-SNAPSHOT</version>
+        <version>6.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -52,7 +52,7 @@
        <dependency>
             <groupId>network.oxalis</groupId>
             <artifactId>oxalis-as4</artifactId>
-            <version>6.0.1-SNAPSHOT</version>
+            <version>6.0.0</version>
         </dependency>
     </dependencies>
 
